--- a/src/app/components/person/person.component.html
+++ b/src/app/components/person/person.component.html
@@ -10,3 +10,92 @@
 <!-- <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
 
 </ng-container> -->
+
+<h1 mat-dialog-title>Editar Socio</h1>
+<div mat-dialog-content>
+  <mat-form-field>
+    <mat-label>DNI</mat-label>
+    <input matInput [(ngModel)]="selectedPerson.dni" />
+  </mat-form-field>
+  <table class="full-name-table" cellSpacing="0">
+    <tr>
+      <td>
+        <mat-form-field>
+          <mat-label>First name</mat-label>
+          <input
+            [(ngModel)]="selectedPerson.firstName"
+            matInput
+            [formControl]="nameFormControl"
+          />
+          <mat-error
+            *ngIf="
+              nameFormControl.hasError('pattern') &&
+              !nameFormControl.hasError('required')
+            "
+          >
+            Por favor, ingrese un nombre válido
+          </mat-error>
+          <mat-error *ngIf="nameFormControl.hasError('required')">
+            El campo Nombre es <strong>requerido</strong>
+          </mat-error>
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field>
+          <mat-label>Last name</mat-label>
+          <input
+            [(ngModel)]="selectedPerson.lastName"
+            matInput
+            [formControl]="nameFormControl"
+          />
+        </mat-form-field>
+      </td>
+    </tr>
+  </table>
+  <mat-form-field>
+    <mat-label>Email</mat-label>
+    <input
+      [(ngModel)]="selectedPerson.email"
+      matInput
+      [formControl]="emailFormControl"
+      placeholder="Ex. pat@example.com"
+    />
+    <mat-error
+      *ngIf="
+        emailFormControl.hasError('email') &&
+        !emailFormControl.hasError('required')
+      "
+    >
+      Please enter a valid email address
+    </mat-error>
+    <mat-error *ngIf="emailFormControl.hasError('required')">
+      Email is <strong>required</strong>
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Phone</mat-label>
+    <input [(ngModel)]="selectedPerson.phone" matInput />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Birthdate</mat-label>
+    <input
+      [(ngModel)]="selectedPerson.birthdate"
+      matInput
+      [matDatepicker]="picker"
+    />
+    <mat-hint>MM/DD/YYYY</mat-hint>
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+</div>
+<div matDialogActions>
+  <button mat-button (click)="onNoClick()">Cancelar</button>
+  <button
+    mat-flat-button
+    color="primary"
+    [mat-dialog-close]="selectedPerson"
+    cdkFocusInitial
+  >
+    Aceptar
+  </button>
+</div>
