--- a/src/app/components/person/person.component.html
+++ b/src/app/components/person/person.component.html
@@ -13,29 +13,36 @@
 
 <h1 mat-dialog-title>Editar Socio</h1>
 <div mat-dialog-content>
+  <p id="error-message">{{ this.message }}</p>
   <mat-form-field>
     <mat-label>DNI</mat-label>
-    <input matInput [(ngModel)]="selectedPerson.dni" />
+    <input matInput [formControl]="dni" />
+    <mat-error
+      *ngIf="
+        (dni.hasError('pattern') || dni.hasError('minLength')) &&
+        !dni.hasError('required')
+      "
+    >
+      Ingrese un DNI válido
+    </mat-error>
+    <mat-error *ngIf="dni.hasError('required')">
+      El campo DNI es <strong>requerido</strong>
+    </mat-error>
   </mat-form-field>
   <table class="full-name-table" cellSpacing="0">
     <tr>
       <td>
         <mat-form-field>
           <mat-label>First name</mat-label>
-          <input
-            [(ngModel)]="selectedPerson.firstName"
-            matInput
-            [formControl]="nameFormControl"
-          />
+          <input matInput [formControl]="firstName" />
           <mat-error
             *ngIf="
-              nameFormControl.hasError('pattern') &&
-              !nameFormControl.hasError('required')
+              firstName.hasError('pattern') && !firstName.hasError('required')
             "
           >
-            Por favor, ingrese un nombre válido
+            Ingrese un nombre válido
           </mat-error>
-          <mat-error *ngIf="nameFormControl.hasError('required')">
+          <mat-error *ngIf="firstName.hasError('required')">
             El campo Nombre es <strong>requerido</strong>
           </mat-error>
         </mat-form-field>
@@ -43,11 +50,16 @@
       <td>
         <mat-form-field>
           <mat-label>Last name</mat-label>
-          <input
-            [(ngModel)]="selectedPerson.lastName"
-            matInput
-            [formControl]="nameFormControl"
-          />
+          <input matInput [formControl]="lastName" />
+          <mat-error
+            *ngIf="
+              lastName.hasError('pattern') && !lastName.hasError('required')
+            "
+            >Ingrese un apellido válido</mat-error
+          >
+          <mat-error *ngIf="lastName.hasError('required')"
+            >El campo apellido es <strong>requerido</strong></mat-error
+          >
         </mat-form-field>
       </td>
     </tr>
@@ -55,37 +67,34 @@
   <mat-form-field>
     <mat-label>Email</mat-label>
     <input
-      [(ngModel)]="selectedPerson.email"
+      type="email"
       matInput
-      [formControl]="emailFormControl"
+      [formControl]="email"
       placeholder="Ex. pat@example.com"
     />
-    <mat-error
-      *ngIf="
-        emailFormControl.hasError('email') &&
-        !emailFormControl.hasError('required')
-      "
-    >
+    <mat-error *ngIf="email.hasError('email') && !email.hasError('required')">
       Please enter a valid email address
     </mat-error>
-    <mat-error *ngIf="emailFormControl.hasError('required')">
+    <mat-error *ngIf="email.hasError('required')">
       Email is <strong>required</strong>
     </mat-error>
   </mat-form-field>
   <mat-form-field>
     <mat-label>Phone</mat-label>
-    <input [(ngModel)]="selectedPerson.phone" matInput />
+    <input [formControl]="phone" matInput />
+    <mat-error *ngIf="phone.hasError('pattern')"
+      >Ingrese un telefono válido</mat-error
+    >
   </mat-form-field>
   <mat-form-field>
     <mat-label>Birthdate</mat-label>
-    <input
-      [(ngModel)]="selectedPerson.birthdate"
-      matInput
-      [matDatepicker]="picker"
-    />
+    <input [formControl]="birthdate" matInput [matDatepicker]="picker" />
     <mat-hint>MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
+    <mat-error *ngIf="birthdate.hasError('required')"
+      >La fecha de nacimiento es <strong>requerida</strong></mat-error
+    >
   </mat-form-field>
 </div>
 <div matDialogActions>
@@ -93,8 +102,8 @@
   <button
     mat-flat-button
     color="primary"
-    [mat-dialog-close]="selectedPerson"
-    cdkFocusInitial
+    (click)="sendNewPerson()"
+    [disabled]="dataValidation()"
   >
     Aceptar
   </button>
