--- a/src/app/pages/persons/persons.component.html
+++ b/src/app/pages/persons/persons.component.html
@@ -98,6 +98,9 @@
     </table>
   </div>
 </ng-container>
+<ng-container *ngIf="persons.length === 0">
+  <div class="persons-table">Tabla vacía</div>
+</ng-container>
 
 <!-- <mat-card>
   <mat-card-header>
