--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<mat-toolbar color="primary">Comuna</mat-toolbar>
+<mat-toolbar color="primary">
+  <span>Comuna</span>
+  <span class="toolbar-spacer"></span>
+  <span>Iniciar sesion</span>
+</mat-toolbar>
 
 <main>
   <router-outlet></router-outlet>
